--- a/ex3.html
+++ b/ex3.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
+  </head>
+  <body>
+    <span id="nameshow"></span><br />
+    <button type="button" id="show">名前を表示</button>
 
-<span id="nameshow">船場</span><br>
-<button type="button" id="show">名前を表示</button>
-
-<script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="ex3.js">
-</script>
-</body>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="ex3.js"></script>
+  </body>
 </html>
