--- a/ex3.html
+++ b/ex3.html
@@ -8,6 +8,26 @@
     <span id="nameshow"></span><br />
     <button type="button" id="show">名前を表示</button>
 
+
+    <br><br>
+    ・趣味は何ですか
+    <select id="hobby">
+    <option value="0"> -- </option>
+    <option value="1">トライアスロン</option>
+    <option value="2">その他</option>
+    </select>
+    <div id="try" style="display: none;">
+    <input type="radio" name="favorite" value="swim">Swim
+    <input type="radio" name="favorite" value="bike">Bike
+    <input type="radio" name="favorite" value="run">Run
+    </div>
+    <div id="other" style="display: none;">
+        <!-- その他の場合 -->
+        それでは何が好き？
+        <input type="text" name="favorite">
+    </div>
+
+
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="ex3.js"></script>
   </body>
