--- a/ex3.html
+++ b/ex3.html
@@ -27,6 +27,12 @@
         <input type="text" name="favorite">
     </div>
 
+    <form action="#" >    
+    名前：
+    <input type="text" id="name">
+    <button id="submit">送信</button>
+    </form>
+
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="ex3.js"></script>
